package application;

public interface IMegaEvoluable {

    MegaPokemon evoluer();

}