package application;

import application.Librairie.*;


public interface IObscurDecorator {

    Pokemon purifier();

}
