package application.Librairie;

import java.util.Arrays;

public class Florizarre extends Pokemon {

    public Florizarre() {
        super(Arrays.asList(Type.Plante, Type.Poison));
    }
}