package application.Librairie;

public interface IEvoluable {

    Pokemon evoluer();

}