package application.Librairie;

public enum Type {
    Plante,
    Poison
}