package application;

import application.Librairie.*;
import java.util.List;

public abstract class MegaPokemon extends Pokemon {

    public MegaPokemon(List<Type> types) {
        super(types);
    }

}