@startuml Pokemon

package "Librairie" #DDDDDD {
    abstract class Pokemon {
        - Types : Type[]
        getTypes() : Type[]
    }

    interface IEvoluable {
        evoluer() : Pokemon
    }

    enum Type {
    }

    class Bulbizarre {
    }

    class Herbizarre {
    }

    class Florizarre {
    }
}

abstract class MegaPokemon {
}

interface IMegaEvoluable {
    evoluer() : MegaPokemon
}

class MegaFlorizarre {
}

class FlorizarreAdapter {
}

interface IObscurDecorator {
    purifier() : Pokemon
}

class PokemonObscurProxy{
    - PokemonClassique :Pokemon
    + purifier() : Pokemon
    + getTypes(Type[]) : List[]
    - TypesObsur(Type[]) : List[]
    
}

class PokemonObscurDecorator{
    - PokemonClassique :Pokemon
    + getTypes(Type[]) : List[]
    - TypesObsur(Type[]) : List[]
    
}

Pokemon ..|> IEvoluable : uses
Pokemon ..|> Type: uses
Pokemon <|-- Bulbizarre
Pokemon <|-- Herbizarre
Pokemon <|-- Florizarre
IEvoluable <|.. Bulbizarre
IEvoluable <|.. Herbizarre

MegaPokemon ..|> IMegaEvoluable : uses
Pokemon <|-- MegaPokemon
IMegaEvoluable <|..FlorizarreAdapter
Florizarre <|--FlorizarreAdapter
MegaPokemon <|--MegaFlorizarre

Pokemon <|--PokemonObscurProxy : uses

Pokemon <|--IObscurDecorator : uses
IObscurDecorator <|..PokemonObscurDecorator


@enduml